added screen shot

--- a/_posts/2016-07-09-ipython-5.md
+++ b/_posts/2016-07-09-ipython-5.md
@@ -22,5 +22,19 @@ Issues:
 
 
 ## Pretty Pictures: Code Highlighting
+```source activate py3
+ipython
+```
+
+<figure>
+    <img  src="/images/ipython_code_highlight.png" alt="image of ipython 5 code highlighting">
+    <figcaption>Ipython 5 code high lighting in the terminal.</figcaption>
+</figure>
+
+
+## More ipython 5 goodness
+I've been stubbornly using Python2.7 for a while and one thing I hate is trying to edit a function definition on the terminal that I've already defined.
+
+I don't know when this feature came about but now you can just cursor where ever you want in the function def.
 
 
