VI keybinding fix configuration

--- a/_posts/2016-07-09-ipython-5.md
+++ b/_posts/2016-07-09-ipython-5.md
@@ -10,7 +10,7 @@ image:
 date: 2016-07-09 11:42:13
 ---
 
-I need to work in Python 3 more and stop being lazy. I setup my conda environment for Python3 a while ago and haven't used it all that much. The new ipython 5 has helped me to reenforce my new habit since I love working in a terminal.
+I need to work in Python 3 more and stop being lazy. I setup my conda environment for Python 3 a while ago and haven't used it all that much. The new ipython 5 has helped me to reenforce my new habit since I love working in a terminal.
 
 Issues:
 
@@ -18,7 +18,11 @@ Issues:
     * solved with: `pip install --upgrade --ignore- installed`
         * [issue link](https://github.com/pypa/pip/issues/2751)
 * My VI keybindings broke in the ipython terminal
-    * solved with : _pending_
+    * No longer using `.inputrc`
+    * solved with : setting up IPython configuration
+        * [http://ipython.readthedocs.io/en/stable/config/options/terminal.html](http://ipython.readthedocs.io/en/stable/config/options/terminal.html)
+        * `ipython --profile ipython5`
+        * added the configuration file to my git repo under `dotfiles`
 
 
 ## Pretty Pictures: Code Highlighting
@@ -32,9 +36,12 @@ ipython
 </figure>
 
 
-## More ipython 5 goodness
-I've been stubbornly using Python2.7 for a while and one thing I hate is trying to edit a function definition on the terminal that I've already defined.
+## More IPython 5 goodness
+I've been stubbornly using Python2.7 for a while and one thing I hated was trying to edit a function definition on the terminal that I've already defined.
 
 I don't know when this feature came about but now you can just cursor where ever you want in the function def.
 
 
+## Links
+* [IPython 5.x Documentation](http://ipython.readthedocs.io/en/stable/whatsnew/version5.html)
+* [IPython Configuration Docs](http://ipython.readthedocs.io/en/stable/config/intro.html)
