--- a/_posts/2016-07-31-windows-10.md
+++ b/_posts/2016-07-31-windows-10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Windows 10"
+title: "Brush with Windows 10"
 modified:
 categories:
 excerpt:
@@ -10,7 +10,7 @@ image:
 date: 2016-07-31 14:49:04
 ---
 I had a chance to try out Windows 10 recently on a brand new Dell laptop that
-had hardly been used. To be brief, I wasn't impressed at all...
+had hardly been used. To be brief, I wasn't impressed.
 
 <figure>
     <img src="/images/windows_10_screen.jpg" alt="Windows 10 screen">
