updated title removed and replaced missed text

--- a/_posts/2016-11-06-patchelf.md
+++ b/_posts/2016-11-06-patchelf.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "patchelf"
+title: "Patching Library Paths in Compiled Binaries"
 modified:
 categories:
 excerpt:
@@ -107,15 +107,15 @@ done
 Note "not found" did not occur and hence we don't need to fix these at all.
 
 # patchelf
-Not found in the `yum` repository. Instead of adding another repo for Jed to maintain he compiled it from source. It was easy as I recall.
+Not found in the `yum` repository. Instead of adding another repo it was compiled from source. It was easy as I recall.
 
 ## Patch the Binary `FooBin`
 The utility `patchelf` is pretty easy to use. The changes are made in-place.
 
 {% highlight bash %}
 patchelf --replace-needed /path/that/doesnot/exist/libIntel_foobaz.so libIntel_foobaz.so FooBin
-10143  patchelf --replace-needed /path/that/doesnot/exist/libIntel_stuff.so libIntel_stuff.so  FooBin
-10144  patchelf --replace-needed /path/that/doesnot/exist/libIntel_core.so libIntel_core.so   FooBin
+patchelf --replace-needed /path/that/doesnot/exist/libIntel_stuff.so libIntel_stuff.so  FooBin
+patchelf --replace-needed /path/that/doesnot/exist/libIntel_core.so libIntel_core.so   FooBin
 {% endhighlight %}
 
 ## libs dir
@@ -151,7 +151,7 @@ list=($(find . -maxdepth 1 -type f))
 
 for bin in ${list[@]};do
     echo $bin
-    ldd $bin | grep "pubsw" | sort | uniq
+    ldd $bin | grep "path" | sort | uniq
 done
 {% endhighlight %}
 
