--- a/_posts/2016-11-06-patchelf.md
+++ b/_posts/2016-11-06-patchelf.md
@@ -147,7 +147,7 @@ foobaz="libIntel_foobaz.so"
 Make a list of binaries:
 
 {% highlight bash %}
-list=($(find . -maxdepth 1 -type f))
+list=($(find . -executable -type f))
 
 for bin in ${list[@]};do
     echo $bin
